.metadata/FieloImport/objects/ImportRequest__c.object
<CustomObject>
    <label>Import Request</label>
    <nameField>
        <displayFormat>IR-{00000000}</displayFormat>
        <label>Import Request Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Import Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>Details__c</fullName>
        <label>Details</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Duration__c</fullName>
        <label>Duration (ms)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>File__c</fullName>
        <label>File Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SOQLs__c</fullName>
        <label>SOQL Queries</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                </value>
                <value>
                    <fullName>Validation Succeeded</fullName>
                </value>
                <value>
                    <fullName>Validation Failed</fullName>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Import Succeeded</fullName>
                </value>
                <value>
                    <fullName>Import Failed</fullName>
                </value>
                <value>
                    <fullName>Fail</fullName>
                    <isActive>false</isActive>
                    <label>Fail</label>
                </value>
                <value>
                    <fullName>Succeeded</fullName>
                    <isActive>false</isActive>
                    <label>Succeeded</label>
                </value>
                <value>
                    <fullName>Validated</fullName>
                    <isActive>false</isActive>
                    <label>Validated</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>